# MAI-PRGM-course

./: .gitignore  CMakeLists.txt  README.md
ExamPreparation/: CMakeLists.txt  ChatGPT-C++_ExamPreparation.md  README.md  main.cpp
ExamPreparation/AccessModifiers/: README.md  access_modifiers.cpp
ExamPreparation/Algorithms/: README.md  algorithms.cpp
ExamPreparation/CRTP/: README.md  crtp.cpp
ExamPreparation/ClassesAndObjects/: README.md  classes_and_objects.cpp
ExamPreparation/ConstructorsDestructors/: README.md  constructors_destructors.cpp
ExamPreparation/CopyConstructorAssignment/: README.md  copy_constructor_assignment.cpp
ExamPreparation/Inheritance/: README.md  inheritance.cpp
ExamPreparation/Iterators/: README.md  iterators.cpp
ExamPreparation/MoveConstructorAssignment/: README.md  move_constructor_assignment.cpp
ExamPreparation/Namespaces/: README.md  namespaces.cpp
ExamPreparation/NewDelete/: README.md  new_delete.cpp
ExamPreparation/NonVirtualInterface/: README.md  non_virtual_interface.cpp
ExamPreparation/PointerReferenceCopy/: README.md  pointer_reference_copy.cpp
ExamPreparation/PolicyBasedDesign/: README.md  policy_based_design.cpp
ExamPreparation/Polymorphism/: README.md  polymorphism.cpp
ExamPreparation/RAII/: README.md  raii.cpp
ExamPreparation/RuleOfThreeFiveZero/: README.md  rule_of_three_five_zero.cpp
ExamPreparation/STLContainers/: README.md  list_example.cpp  map_example.cpp  set_example.cpp  unordered_map_example.cpp  vector_example.cpp
ExamPreparation/SmartPointers/: README.md  shared_ptr_example.cpp  unique_ptr_example.cpp  weak_ptr_example.cpp
ExamPreparation/StackHeap/: README.md  stack_heap.cpp
ExamPreparation/Templates/: README.md  class_templates.cpp  function_templates.cpp  template_argument_deduction.cpp  template_specialization.cpp
ExamPreparation/TypeBasedDispatching/: README.md  type_based_dispatching.cpp
ExerciseStringFull/: CMakeLists.txt  Part1.cpp  Part2.cpp  Part3.cpp  String.cpp  String.h  main.cpp
Session02/TileExercise/: CMakeLists.txt  main.cpp
Session02/TileExercise/include/: BlueTile.h  Floor.h  GreenTile.h  RedTile.h  Tile.h
Session02/TileExercise/src/: BlueTile.cpp  Floor.cpp  (+3 more)
(+8 files in other folders)
